[ci] Create testing db

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
           sudo apt update
           sudo apt install golang
 
+      - name: Create test db
+        run: make create-test-db
+
       - name: Build test cli
         run: make build-test-cli
 
