[ci] Basic cli and deamon tests
We can easily isolate and test cli.
However for most parts we can't isolate and test daemon only. In order to cope with that problem we first test cli, and then we test daemon+cli. Therefore it will follow that if errors arise in cli only part then there would be an error in cli part, if errors arise in daemon+cli part and not in cli part then there would be an error in daemon.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,11 @@ jobs:
           sudo apt update
           sudo apt install golang
 
-      - name: Create test db
-        run: make create-test-db
-
       - name: Build test cli
         run: make build-test-cli
 
+      - name: Build test daemon
+        run: make build-test-daemon
+
       - name: Run tests
-        run: ./testing/test-cli
+        run: sudo ./run-tests
