[ci] Install expect

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install daemon dependencies
         run: sudo apt-get install binutils gawk sqlite3 libsqlite3-dev libbpf-dev
 
+      - name: Install expect
+        run: sudo apt-get install expect
+
       - name: Build test cli
         run: make build-test-cli
 
