[test] Add no-valgrind run test option
Valgrind on ubuntu 22.04 does not handle all eBPF commands.
It's not because there is some kind of issue with valgrind, but rather there is a problem with ubuntu itself.
I created two new virtual machines, one with debian, and the other one with ubuntu.
On both of them, I installed valgrind from source code, following exactly same procedures on both VMs.
On debian valgrind support all eBPF commands (or at least the commands that nhid uses), on ubuntu following error raise:

```
WARNING: unhandled eBPF command 28
```

Therefore I decided not to run nhid via valgrind on github's ubuntu 22.04 VM.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,4 +37,4 @@ jobs:
         run: make build-test-daemon
 
       - name: Run tests
-        run: sudo ./run-tests
+        run: sudo ./run-tests no-valgrind
